bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value R
if (litMessage() == R) 
                    ^BDR:4: error: not found: value L
if (litMessage() == L)
                    ^