bdr.BDR.scala.code
if (litMessage() == R) 
	droite()
	avance()
if (litMessage() == L)
	gauche()
	avance()